--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox - projekt</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="logo">LOGO</div>
+      <form action="/" class="serch">wyszukiwarka</form>
+      <div class="settings">ustawienia</div>
+      <nav class="menu">menu</nav>
+      <section class="main-articles">artykóły GŁ</section>
+      <section class="articles-list">artykóły lista</section>
+      <footer class="footer">Stopka</footer>
+    </div>
+  </body>
 </html>
