--- a/index.html
+++ b/index.html
@@ -89,8 +89,92 @@
           <a href="#" class="article__btn">Czytaj dalej</a>
         </article>
       </section>
-      <section class="articles-list">artykóły lista</section>
-      <footer class="footer">Stopka</footer>
+      <section class="articles-list">
+        <article class="article article--small">
+          <img
+            class="article__image"
+            src="https://placeimg.com/300/300/tech/8"
+            alt=""
+          />
+          <h1 class="article__title">Tytłół artykułu 1</h1>
+        </article>
+        <article class="article article--small">
+          <img
+            class="article__image"
+            src="https://placeimg.com/300/300/tech/3"
+            alt=""
+          />
+          <h1 class="article__title">Tytłół laksiohfycartykułu 2asd</h1>
+        </article>
+        <article class="article article--small">
+          <img
+            class="article__image"
+            src="https://placeimg.com/300/300/tech/4"
+            alt=""
+          />
+          <h1 class="article__title">Tytłółasfdasf artykułu 3</h1>
+        </article>
+        <article class="article article--small">
+          <img
+            class="article__image"
+            src="https://placeimg.com/300/300/tech/5"
+            alt=""
+          />
+          <h1 class="article__title">Tytłółasghgkjjhg artykułu 4</h1>
+        </article>
+        <article class="article article--small">
+          <img
+            class="article__image"
+            src="https://placeimg.com/300/300/tech/6"
+            alt=""
+          />
+          <h1 class="article__title">Tytłół bn,artykułu 5</h1>
+        </article>
+        <article class="article article--small">
+          <img
+            class="article__image"
+            src="https://placeimg.com/300/300/tech/7"
+            alt=""
+          />
+          <h1 class="article__title">Tytłół abgfjfdjrtrtykułu 6</h1>
+        </article>
+        <article class="article article--small">
+          <img
+            class="article__image"
+            src="https://placeimg.com/300/300/tech/2"
+            alt=""
+          />
+          <h1 class="article__title">
+            Tytłółzvvzzxcgvzxvzv agt gf zartykułu 7
+          </h1>
+        </article>
+        <article class="article article--small">
+          <img
+            class="article__image"
+            src="https://placeimg.com/300/300/tech/1"
+            alt=""
+          />
+          <h1 class="article__title">Tytłół artykułu 8</h1>
+        </article>
+      </section>
+      <footer class="footer">
+        <div class="sm-links">
+          <h1 class="sm-links__title">Dowiedz się więcej</h1>
+          <p class="sm-links__item">info 1</p>
+          <p class="sm-links__item">info 2</p>
+          <p class="sm-links__item">info 3</p>
+          <p class="sm-links__item">info 4</p>
+          <p class="sm-links__item">info 5</p>
+        </div>
+        <div class="sm-links sm-links--darken">
+          <h1 class="sm-links__title">Dowiedz się więcej</h1>
+          <p class="sm-links__item">info 1</p>
+          <p class="sm-links__item">info 2</p>
+          <p class="sm-links__item">info 3</p>
+          <p class="sm-links__item">info 4</p>
+          <p class="sm-links__item">info 5</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
